add some css dynamic action

--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -49,9 +49,6 @@
                 <tr>
                     <td><a href="http://github.com/DRJ31" target="_blank">My Github Page</a></td>
                 </tr>
-                <tr>
-                    <td><a href="http://ow.blizzard.cn" target="_blank">My Favorite Website</a></td>
-                </tr>
             </table>
         </div>
         <!--My Contact end-->
@@ -62,17 +59,17 @@
 <!--Introduction and about begin-->
 <div id="maincontent" class="clearfix">
 <!--Introduction Part begin-->
-<div class="floatleft">
+<div class="floatleft cardframe">
     <h1>Introduction of Myself</h1><!--Title-->
     <!--Introduction content begin-->
     <p>My name is Deng Renjie and my English name is Jack. My favorite sport is tennis. At the same time, I'm very interested in computer science.</p>
     <p>Some students in CST have learnt much about computer science, for example, Bill can master C language very well, Jack Wu can process videos very well. I have only written a small program to generate raondom student number using visual basic when I was in senior middle school. And after Senior three, I have totally forgotten visual basic.</p>
     <p>After Bill, who I have mentioned before, taught Jack Wu and Laurence Luo and I how to use github, I begin to code again. This time, I learn javascript and PHP by myself and upload my project to github.</p>
-    <p>In this Semester, I want to be developer of this project.</p>
+    <p>In this Semester, I want to be developer and web designer of this project. I want to learn more about javascript such as jQuery and create more elegant effect in my project. Though I have tried to use jQuery in winter holiday, but it usually doesn't work, and I have to write the function by myself using origin javascript. Therefore, I want to figure out why jQuery doesn't work sometimes.</p>
     <!--Introduction content end-->
 </div>
 <!--Introduction Part end-->
-<div class="floatright">
+<div class="floatright cardframe">
     <h1>About this webpage</h1><!--title-->
     <!--list begin-->
     <ul>
@@ -82,6 +79,10 @@
     </ul>
     <!--list end-->
 </div>
+    <!--Favourite page button-->
+    <div class="favbutton" onclick="favpage()">
+        Favourfite Website
+    </div>
 </div>
 <!--Introduction and about end-->
 <!--timetable begin-->
