--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -65,7 +65,10 @@
     <p>My name is Deng Renjie and my English name is Jack. My favorite sport is tennis. At the same time, I'm very interested in computer science.</p>
     <p>Some students in CST have learnt much about computer science, for example, Bill can master C language very well, Jack Wu can process videos very well. I have only written a small program to generate raondom student number using visual basic when I was in senior middle school. And after Senior three, I have totally forgotten visual basic.</p>
     <p>After Bill, who I have mentioned before, taught Jack Wu and Laurence Luo and I how to use github, I begin to code again. This time, I learn javascript and PHP by myself and upload my project to github.</p>
-    <p>In this Semester, I want to be developer and web designer of this project. I want to learn more about javascript such as jQuery and create more elegant effect in my project. Though I have tried to use jQuery in winter holiday, but it usually doesn't work, and I have to write the function by myself using origin javascript. Therefore, I want to figure out why jQuery doesn't work sometimes.</p>
+    <h3>What role do I want to play</h3>
+    <p>In this Semester, I want to be developer and web designer of this project because I have experience in both web designing and developing. </p>
+    <h3>What do I want to gain from this class</h3>
+    <p>I want to learn more about javascript such as jQuery and create more elegant effect in my project. And I also want to learn to use more different frames. Though I have tried to use jQuery in winter holiday, but it usually doesn't work, and I have to write the function by myself using origin javascript. Therefore, I want to figure out why jQuery doesn't work sometimes.</p>
     <!--Introduction content end-->
 </div>
 <!--Introduction Part end-->
@@ -81,14 +84,14 @@
 </div>
     <!--Favourite page button-->
     <div class="favbutton" onclick="favpage()">
-        Favourfite Website
+        Favourite Website
     </div>
 </div>
 <!--Introduction and about end-->
 <!--timetable begin-->
-<div id="tablecontent" class="textcenter">
+<div id="tablecontent" solid #ddd" class="textcenter">
     <h1>My Timetable</h1>
-<table width="100%" border="1px solid #666" cellspacing="0">
+<table width="100%" cellpadding="10px" cellspacing="0">
     <!--First row-->
     <tr>
         <th>Time</th>
@@ -98,98 +101,25 @@
         <th>Thu</th>
         <th>Fri</th>
     </tr>
-    <!--Moring Schedule-->
-    <!--Second row-->
+    <!--Morning Schedule-->
     <tr>
-        <th>8:00-8:50</th>
+        <th>Morning</th>
         <td>Introduction to Psychology (1) <br/>T405</td>
-        <td>English II (8)<br/>T403/T604/T203/T302/T303/T404</td>
-        <td>Emotional Intelligence (2)<br/>T104/T204/T304/T405/T504/T505</td>
+        <td>English II (8)<br/>T302</td>
+        <td>Emotional Intelligence (2)<br/>T301</td>
         <td>Software Development Workshop I (1)<br/>T202</td>
         <td></td>
     </tr>
-    <!--Third row-->
-    <tr>
-        <th>9:00-9:50</th>
-        <td>Introduction to Psychology (1) <br/>T405</td>
-        <td>English II (8)<br/>T403/T604/T203/T302/T303/T404</td>
-        <td>Emotional Intelligence (2)<br/>T104/T204/T304/T405/T504/T505</td>
-        <td>Software Development Workshop I (1)<br/>T202</td>
-        <td></td>
-    </tr>
-    <!--Fourth row-->
-    <tr>
-        <th>10:00-10:50</th>
-        <td>Introduction to Psychology (1) <br/>T405</td>
-        <td>English II (8)<br/>T403/T604/T203/T302/T303/T404</td>
-        <td>Emotional Intelligence (2)<br/>T104/T204/T304/T405/T504/T505</td>
-        <td>Software Development Workshop I (1)<br/>T202</td>
-        <td></td>
-    </tr>
-    <!--Fifth row-->
-    <tr>
-        <th>11:00-11:50</th>
-        <td>Introduction to Psychology (1) <br/>T405</td>
-        <td>English II (8)<br/>T403/T604/T203/T302/T303/T404</td>
-        <td>Emotional Intelligence (2)<br/>T104/T204/T304/T405/T504/T505</td>
-        <td>Software Development Workshop I (1)<br/>T202</td>
-        <td></td>
-    </tr>
-    <!--Sixth row-->
     <!--Afternoon Schedule-->
     <tr>
-        <th>12:00-12:50</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <!--Seventh row-->
-    <tr>
-        <th>13:00-13:50</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>Chinese Thought through the Ages (20)<br/>T603</td>
-        <td>Speaking of Statistics (6)<br/>T101</td>
-    </tr>
-    <!--Eighth row-->
-    <tr>
-        <th>14:00-14:50</th>
-        <td>Business and Society (7)<br/>T101</td>
-        <td></td>
-        <td></td>
-        <td>Chinese Thought through the Ages (20)<br/>T603</td>
-        <td>Speaking of Statistics (6)<br/>T101</td>
-    </tr>
-    <!--Ninth row-->
-    <tr>
-        <th>16:00-16:50</th>
+        <th>Afternoon</th>
         <td>Business and Society (7)<br/>T101</td>
         <td></td>
         <td>Badminton (3)<br/>P. E. Place</td>
         <td>Chinese Thought through the Ages (20)<br/>T603</td>
         <td>Speaking of Statistics (6)<br/>T101</td>
     </tr>
-    <!--Tenth row-->
-    <tr>
-        <th>16:00-16:50</th>
-        <td>Business and Society (7)<br/>T101</td>
-        <td></td>
-        <td>Badminton (3)<br/>P. E. Place</td>
-        <td>Chinese Thought through the Ages (20)<br/>T603</td>
-        <td>Speaking of Statistics (6)<br/>T101</td>
-    </tr>
-    <!--Last row-->
-    <tr>
-        <th>17:00-17:50</th>
-        <td>Business and Society (7)<br/>T101</td>
-        <td></td>
-        <td>Badminton (3)<br/>P. E. Place</td>
-        <td></td>
-        <td></td>
-    </tr>
+
 </table>
 </div>
 <!--timetable end-->
