real last version

--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -78,13 +78,15 @@
     <ul>
         <li>Click Wechat number and you can watch my wechat code.</li>
         <li>This webpage can also adapt to mobile devices.</li>
-        <li>I chose this for my facvorite website because it gave me many ideas when I design the main page of CST cybergame competition.</li>
     </ul>
     <!--list end-->
 </div>
     <!--Favourite page button-->
-    <div class="favbutton" onclick="favpage()">
-        Favourite Website
+    <div class="favbutton" onclick="favpage('http://ow.blizzard.cn')">
+        Favourite Website 1: OverWatch
+    </div>
+    <div class="favbutton1" onclick="favpage('http://bilibili.com')">
+        Favourite Website 2: Bilibili
     </div>
 </div>
 <!--Introduction and about end-->
