--- a/Exercise1/myhome.html
+++ b/Exercise1/myhome.html
@@ -85,13 +85,14 @@
     <div class="favbutton" onclick="favpage('http://ow.blizzard.cn')">
         Favourite Website 1: OverWatch
     </div>
+    <!--Another Favourite page button-->
     <div class="favbutton1" onclick="favpage('http://bilibili.com')">
         Favourite Website 2: Bilibili
     </div>
 </div>
 <!--Introduction and about end-->
 <!--timetable begin-->
-<div id="tablecontent" solid #ddd" class="textcenter">
+<div id="tablecontent" class="textcenter">
     <h1>My Timetable</h1>
 <table width="100%" cellpadding="10px" cellspacing="0">
     <!--First row-->
