--- a/Exercise1/myhome.html
+++ b/Exercise1/myhome.html
@@ -77,7 +77,7 @@
     <!--list begin-->
     <ul>
         <li>Click Wechat number and you can watch my wechat code.</li>
-        <li>This webpage can also adapt to mobile devices.</li>
+        <li>This webpage can also adapt to mobile devices. The effect would be much better if you watch it in landscape mode of mobile phone.</li>
     </ul>
     <!--list end-->
 </div>
@@ -92,8 +92,9 @@
 </div>
 <!--Introduction and about end-->
 <!--timetable begin-->
+<h1 style="text-align: center">My Timetable</h1>
 <div id="tablecontent" class="textcenter">
-    <h1>My Timetable</h1>
+
 <table width="100%" cellpadding="10px" cellspacing="0">
     <!--First row-->
     <tr>
