exercise 2 first commit

--- a/Exercise1/myhome.html
+++ b/Exercise1/myhome.html
@@ -127,7 +127,9 @@
 </table>
 </div>
 <!--timetable end-->
-
+<div class="joinbutton" onclick="favpage('../Exercise2/index.html')">
+    Join my Company
+</div>
 <div id="footer" class="textcenter">
     ©Deng Renjie All Rights Reserved
 </div>
