--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -42,7 +42,7 @@
            Working Experience: <br/>
            <textarea name="experience" id="experience" cols="30" rows="10"></textarea><br/>
            Upload a file <input type="file"><br/>
-           <input type="button" onclick="checkmail()" value="Generate information">
+           <input type="button" onclick="information()" value="Generate information">
            <input type="button" onclick="formreset()" value="reset">
            <input type="submit">
        </form>
