--- a/myhome.html
+++ b/myhome.html
@@ -127,7 +127,7 @@
 </table>
 </div>
 <!--timetable end-->
-<div class="joinbutton" onclick="favpage('../Exercise2/index.html')">
+<div class="joinbutton" onclick="favpage('Exercise2/index.html')">
     Join my Company
 </div>
 <div id="footer" class="textcenter">
