html and javascript part done, begin php

--- a/myhome.html
+++ b/myhome.html
@@ -127,11 +127,11 @@
 </table>
 </div>
 <!--timetable end-->
-<div class="joinbutton" onclick="favpage('Exercise2/index.html')">
+<div class="joinbutton" onclick="window.location.href='Exercise2/index.html'">
     Join my Company
 </div>
 <div id="footer" class="textcenter">
-    ©Deng Renjie All Rights Reserved
+    © Deng Renjie All Rights Reserved
 </div>
 </body>
 <!--body part end-->
