--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -1,51 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Join my Company</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width">
     <script src="main.js"></script>
 </head>
 <body>
+<div id="header">
+    Your information
+</div>
+<!--main part-->
    <div class="maincontainer">
        <form action="" id="mainform">
-           Username: <input type="text" name="username" id="username"/><br/>
-           Email: <input type="text" name="email" id="email"/><br/>
-           Your gender: <br/>
+           <!--username-->
+           Username: <br/><br/><input type="text" name="username" id="username"/><br/><br/><br/>
+           <!--email-->
+           Email: <br/><br/><input type="text" name="email" id="email"/><br/><br/><br/>
+           <!--gender-->
+           <fieldset>
+           <legend>Your gender:</legend>
            <input type="radio" name="gender" value="His">Male <br/>
            <input type="radio" name="gender" value="Her">Female <br/>
-           Your Current Skill <br/>
+           </fieldset>
+           <br/><br/>
+           <!--skills-->
+           <fieldset>
+           <legend>Your Current Skills</legend>
            <input type="checkbox" name="skill" value="Web Design"/>Web Design <br/>
            <input type="checkbox" name="skill" value="Java"/>Java <br/>
            <input type="checkbox" name="skill" value="Database"/>Database <br/>
-           City Expected <br/>
+           </fieldset>
+           <br/><br/>
+           <!--city-->
+           <fieldset>
+               <legend>City Expected</legend>
            <input type="radio" name="city" value="Beijing"/>Beijing <br/>
            <input type="radio" name="city" value="Shenzhen"/>Shenzhen <br/>
            <input type="radio" name="city" value="Zhuhai"/>Zhuhai <br/>
-           Position
-           <select name="position" id="position">
+           </fieldset>
+           <br/><br/>
+           <!--position-->
+           Position <br/><br/>
+           <select name="position" id="position" height="30px">
                 <option value="Officer">Officer</option>
                 <option value="Manager">Manager</option>
                 <option value="Engineer">Engineer</option>
                 <option value="Architect">Architect</option>
            </select>
-           <br/>
-           Recent Jobs: <br/>
+           <br/><br/><br/>
+           <!--recent jobs-->
+           Recent Jobs: <br/><br/>
            <select name="recent" id="recent" multiple="multiple">
                <option value="Assistant">Assistant</option>
                <option value="Software Engineer">Software Engineer</option>
                <option value="Customer Service">Customer Service</option>
                <option value="Manager">Manager</option>
                <option value="CEO">CEO</option>
-           </select><br/>
-           Working Experience: <br/>
-           <textarea name="experience" id="experience" cols="30" rows="10"></textarea><br/>
-           Upload a file <input type="file"><br/>
-           <input type="button" onclick="information()" value="Generate information">
-           <input type="button" onclick="formreset()" value="reset">
-           <input type="submit">
+           </select><br/><br/><br/>
+           <!--working experience-->
+           Working Experience: <br/><br/>
+           <textarea name="experience" id="experience" class="textarea" rows="10"></textarea><br/><br/><br/>
+           <!--upload file-->
+           Upload a file <br/><br/><input type="file"><br/><br/><br/>
+           <!--submit button-->
+           <input type="button" onclick="information()" value="Submit" class="greenbtn">
+           <!--reset button-->
+           <input type="button" onclick="formreset()" value="reset" class="redbtn">
+           <!--view php-->
+           <input type="submit" value="Submit PHP">
+           <!--back to main page-->
+           <input type="button" class="redbtn" value="Back" onclick="window.location.href='../myhome.html'">
        </form>
    </div>
+   <!--footer part-->
+<div id="footer">
+    © Deng Renjie All Rights Reserved
+</div>
 </body>
 </html>
