--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -13,11 +13,11 @@
 </div>
 <!--main part-->
    <div class="maincontainer">
-       <form action="info.php" id="mainform" method="post" onsubmit="checkmail()">
+       <form action="info.php" id="mainform" method="post">
            <!--username-->
-           Username: <br/><br/><input type="text" name="username" id="username"/><br/><br/><br/>
+           Username: <br/><br/><input type="text" name="username" id="username" onfocusout="normalout('username')" onfocus="focuson('username')"/><br/><br/><br/>
            <!--email-->
-           Email: <br/><br/><input type="text" name="email" id="email"/><br/><br/><br/>
+           Email: <br/><br/><input type="text" name="email" id="email" oninput="checkmail()" onfocusout="mailout()" onfocus="focuson('email')"/><br/><br/><br/>
            <!--gender-->
            <fieldset>
            <legend>Your gender:</legend>
@@ -61,13 +61,13 @@
            </select><br/><br/><br/>
            <!--working experience-->
            Working Experience: <br/><br/>
-           <textarea name="experience" id="experience" class="textarea" rows="10"></textarea><br/><br/><br/>
+           <textarea name="experience" id="experience" class="textarea" rows="10" onfocusout="normalout('experience')" onfocus="focuson('experience')"></textarea><br/><br/><br/>
            <!--upload file-->
            Upload a file <br/><br/><input type="file"><br/><br/><br/>
            <!--submit button-->
-           <input type="button" onclick="checkmail()" value="Submit" class="greenbtn">
+           <input type="button" onclick="checkall()" value="Submit" class="greenbtn">
            <!--reset button-->
-           <input type="button" onclick="formreset()" value="reset" class="redbtn">
+           <input type="button" onclick="formreset()" value="Reset" class="redbtn">
            <!--view php-->
            <input type="submit" value="Submit PHP">
            <!--back to main page-->
