--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -64,7 +64,7 @@
            Working Experience: <br/><br/>
            <textarea name="experience" id="experience" class="textarea" rows="10" onfocusout="normalout('experience')" onfocus="focuson('experience')"></textarea><br/><br/><br/>
            <!--upload file-->
-           Upload a file <br/><br/><input type="file"><br/><br/><br/>
+           Upload a file <br/><br/><div id="file"><input type="file"></div><br/><br/><br/>
            <!--submit button-->
            <input type="button" onclick="checkall()" value="Submit" class="greenbtn">
            <!--reset button-->
