simplest function with ugly ui calculator

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,20 +9,28 @@
 </head>
 <body>
 <div class="cal">
- <div id="screen"><div id="row">|</div></div>
+ <div id="screen"></div>
     <div class="buttoncontainer">
+        <button class="button" onclick="resetit()">AC</button>
+        <button class="button" onclick="test()">()</button>
+        <button class="button" onclick="mainnumber('9')">%</button>
+        <button class="button" onclick="calculate('/')">÷</button>
         <button class="button" onclick="mainnumber('7')">7</button>
         <button class="button" onclick="mainnumber('8')">8</button>
         <button class="button" onclick="mainnumber('9')">9</button>
-        <button class="button">X</button>
+        <button class="button" onclick="calculate('*')">x</button>
         <button class="button" onclick="mainnumber('4')">4</button>
         <button class="button" onclick="mainnumber('5')">5</button>
         <button class="button" onclick="mainnumber('6')">6</button>
-        <button class="button">-</button>
+        <button class="button" onclick="calculate('-')">-</button>
         <button class="button" onclick="mainnumber('1')">1</button>
         <button class="button" onclick="mainnumber('2')">2</button>
         <button class="button" onclick="mainnumber('3')">3</button>
         <button class="button" onclick="calculate('+')">+</button>
+        <button class="button">.</button>
+        <button class="button" onclick="mainnumber('0')">0</button>
+        <button class="button">+/-</button>
+        <button class="button" onclick="equal()">=</button>
     </div>
 </div>
 </body>
