--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,21 +13,21 @@
     <div class="buttoncontainer">
         <button class="button" onclick="resetit()">AC</button>
         <button class="button" onclick="test()">()</button>
-        <button class="button" onclick="mainnumber('9')">%</button>
-        <button class="button" onclick="calculate('/')">÷</button>
+        <button class="button" onclick="percentwrite()">%</button>
+        <button class="button" onclick="calculate('÷','/')">÷</button>
         <button class="button" onclick="mainnumber('7')">7</button>
         <button class="button" onclick="mainnumber('8')">8</button>
         <button class="button" onclick="mainnumber('9')">9</button>
-        <button class="button" onclick="calculate('*')">x</button>
+        <button class="button" onclick="calculate('x','*')">x</button>
         <button class="button" onclick="mainnumber('4')">4</button>
         <button class="button" onclick="mainnumber('5')">5</button>
         <button class="button" onclick="mainnumber('6')">6</button>
-        <button class="button" onclick="calculate('-')">-</button>
+        <button class="button" onclick="calculate('-','-')">-</button>
         <button class="button" onclick="mainnumber('1')">1</button>
         <button class="button" onclick="mainnumber('2')">2</button>
         <button class="button" onclick="mainnumber('3')">3</button>
-        <button class="button" onclick="calculate('+')">+</button>
-        <button class="button">.</button>
+        <button class="button" onclick="calculate('+','+')">+</button>
+        <button class="button" onclick="mainnumber('.')">.</button>
         <button class="button" onclick="mainnumber('0')">0</button>
         <button class="button">+/-</button>
         <button class="button" onclick="equal()">=</button>
