--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="cal">
- <div id="screen"></div>
+ <div id="screen"><div id="above"></div><div id="bottom"></div></div>
     <div class="buttoncontainer">
         <button class="sbutton" onclick="larrow()">←</button>
         <button class="sbutton" onclick="rarrow()">→</button>
