add link in home and change style

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="calculator.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -13,38 +13,38 @@
     <div class="buttoncontainer">
         <button class="sbutton" onclick="larrow()">←</button>
         <button class="sbutton" onclick="rarrow()">→</button>
-        <button class="button" onclick="log()">log</button>
-        <button class="button" onclick="sin()">sin</button>
-        <button class="button" onclick="cos()">cos</button>
-        <button class="button" onclick="tan()">tan</button>
-        <button class="button" onclick="exp()">e<sup>x</sup></button>
-        <button class="button" onclick="main(Math.E)">e</button>
-        <button class="button" onclick="main(Math.PI)">&pi;</button>
-        <button class="button" onclick="xxx()">X<sup>2</sup></button>
-        <button class="button" onclick="xxxx()">X!</button>
-        <button class="button" onclick="log10()">ln</button>
-        <button class="button" onclick="sqrt()">√</button>
-        <button class="button" onclick="twox()">2<sup>x</sup></button>
-        <button class="button" onclick="resetit()">AC</button>
-        <button class="button" onclick="main('(')">(</button>
-        <button class="button" onclick="main(')')">)</button>
-        <button class="button" onclick="main('/')">÷</button>
+        <button class="button greybg" onclick="log()">log</button>
+        <button class="button greybg" onclick="sin()">sin</button>
+        <button class="button greybg" onclick="cos()">cos</button>
+        <button class="button greybg" onclick="tan()">tan</button>
+        <button class="button greybg" onclick="exp()">e<sup>x</sup></button>
+        <button class="button greybg" onclick="main(Math.E)">e</button>
+        <button class="button greybg" onclick="main(Math.PI)">&pi;</button>
+        <button class="button greybg" onclick="xxx()">X<sup>2</sup></button>
+        <button class="button greybg" onclick="xxxx()">X!</button>
+        <button class="button greybg" onclick="log10()">ln</button>
+        <button class="button greybg" onclick="sqrt()">√</button>
+        <button class="button greybg" onclick="twox()">2<sup>x</sup></button>
+        <button class="button blue" onclick="resetit()">AC</button>
+        <button class="button blue" onclick="main('(')">(</button>
+        <button class="button blue" onclick="main(')')">)</button>
+        <button class="button blue" onclick="main('/')">÷</button>
         <button class="button" onclick="main('7')">7</button>
         <button class="button" onclick="main('8')">8</button>
         <button class="button" onclick="main('9')">9</button>
-        <button class="button" onclick="main('*')">x</button>
+        <button class="button blue" onclick="main('*')">x</button>
         <button class="button" onclick="main('4')">4</button>
         <button class="button" onclick="main('5')">5</button>
         <button class="button" onclick="main('6')">6</button>
-        <button class="button" onclick="main('-')">-</button>
+        <button class="button blue" onclick="main('-')">-</button>
         <button class="button" onclick="main('1')">1</button>
         <button class="button" onclick="main('2')">2</button>
         <button class="button" onclick="main('3')">3</button>
-        <button class="button" onclick="main('+')">+</button>
+        <button class="button blue" onclick="main('+')">+</button>
         <button class="button" onclick="main('.')">.</button>
         <button class="button" onclick="main('0')">0</button>
         <button class="button" onclick="clean()">CE</button>
-        <button class="button" onclick="equal()">=</button>
+        <button class="button equal" onclick="equal()">=</button>
 
     </div>
 </div>
