--- a/myhome.html
+++ b/myhome.html
@@ -127,8 +127,11 @@
 </table>
 </div>
 <!--timetable end-->
-<div class="joinbutton" onclick="window.location.href='Exercise2/index.html'">
+<div class="bottombutton join" onclick="window.location.href='Exercise2/index.html'">
     Join my Company
+</div>
+<div class="bottombutton calculator" onclick="window.location.href='calculator/index.html'">
+    Calculator
 </div>
 <div id="footer" class="textcenter">
     © Deng Renjie All Rights Reserved
