--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
-<div class="cal">
+<div class="cal"><!--main calculator-->
+    <!--screen part-->
  <div id="screen"><div id="above"></div><div id="bottom"></div></div>
+    <!--button part-->
     <div class="buttoncontainer">
         <button class="sbutton" onclick="larrow()">←</button>
         <button class="sbutton" onclick="rarrow()">→</button>
