--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,6 +15,7 @@
     <div class="buttoncontainer">
         <button class="sbutton" onclick="larrow()">←</button>
         <button class="sbutton" onclick="rarrow()">→</button>
+        <button class="sbutton" onclick="backspace()">&Larr;</button>
         <button class="button greybg" onclick="log()">log</button>
         <button class="button greybg" onclick="sin()">sin</button>
         <button class="button greybg" onclick="cos()">cos</button>
