--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<!--Please check the phone version of this calculator. Thank you.-->
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="white">
+    <meta name="theme-color" content="#ffffff">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="calculator.js"></script>
