change theme color

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,7 +3,7 @@
 <!--Please check the phone version of this calculator. Thank you.-->
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff" id="theme">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" id="style">
     <script src="calculator.js"></script>
