fix overflow problem and keep elements right

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,7 +15,7 @@
  <div id="screen"><div id="above"></div><div id="bottom"></div></div>
     <!--button part-->
     <div class="buttoncontainer">
-        <button class="sbutton" id="changemod" onclick="scrollleft();shake(100)">Night</button>
+        <button class="sbutton" id="changemod" onclick="changemod();shake(100)">Night</button>
         <button class="sbutton" onclick="larrow();shake(100)">←</button>
         <button class="sbutton" onclick="rarrow();shake(100)">→</button>
         <button class="sbutton" onclick="backspace();shake(100)">&Larr;</button>
