--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!--Please check the phone version of this calculator. Thank you.-->
+<!--Please check this calculator with your phone. (Android with Chrome perform much better than iPhone)-->
+<!--stuweb.uic.edu.hk/l630003010 can also direct to myhome.html-->
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#ffffff" id="theme">
