--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,6 +11,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
+<div id="cover">
+    <div id="center">
+        <img src="icon.ico" alt="">
+        <h1>Calculator</h1>
+    </div>
+</div>
 <div class="cal"><!--main calculator-->
     <!--screen part-->
  <div id="screen"><div id="above"></div><div id="bottom"></div></div>
