week4 frame done

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -24,7 +24,7 @@
     <div class="buttoncontainer">
         <button class="sbutton" id="changemod" onclick="changemod();shake(100)">Night</button>
         <button class="sbutton" onclick="larrow();shake(100)">←</button>
-        <button class="sbutton" onclick="rarrow();shake(100)">→</button>
+        <button class="sbutton" onclick="rarrow();shake(100)" title="Sum for fun">Sum</button>
         <button class="sbutton" onclick="backspace();shake(100)">&Larr;</button>
         <button class="button greybg" onclick="log();shake(100)">log</button>
         <button class="button greybg" onclick="sin();shake(100)">sin</button>
