add week 4 folder

--- a/myhome.html
+++ b/myhome.html
@@ -133,6 +133,9 @@
 <div class="bottombutton calculator" onclick="window.location.href='calculator/index.html'">
     Calculator
 </div>
+<div class="bottombutton calculator" onclick="window.location.href='calculator4/index.html'">
+    Week4 Calculator
+</div>
 <div id="footer" class="textcenter">
     © Deng Renjie All Rights Reserved
 </div>
