--- a/calculator4/index.html
+++ b/calculator4/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" id="style">
     <script src="calculator.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <script src="keyboard.js"></script>
 </head>
 <body><!--calculator logo-->
 <div id="cover">
@@ -23,6 +24,7 @@
     <div id="sumresult">
         <script>hundred()</script></div>
 </div>
+<div id="main">
 <div class="cal"><!--main calculator-->
     <!--screen part-->
  <div id="screen"><div id="above"></div><div id="bottom"></div></div>
@@ -30,7 +32,7 @@
     <div class="buttoncontainer">
         <button class="sbutton" id="changemod" onclick="changemod();shake(100)">Night</button>
         <button class="sbutton" onclick="larrow();shake(100)">←</button>
-        <button class="sbutton" onclick="sumdiv('300px');shake(100)" title="Sum for fun">Sum</button>
+        <button class="sbutton" onclick="rarrow();shake(100)">→</button>
         <button class="sbutton" onclick="backspace();shake(100)">&Larr;</button>
         <button class="button greybg" onclick="log();shake(100)">log</button>
         <button class="button greybg" onclick="sin();shake(100)">sin</button>
@@ -66,6 +68,8 @@
         <button class="button equal" onclick="equal();shake(100)">=</button>
 
     </div>
+</div>
+<button class="sumbutton" onclick="sumdiv('300px');shake(100)">Sum for fun</button>
 </div>
 </body>
 </html>
