--- a/calculator4/index.html
+++ b/calculator4/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" id="style">
     <script src="calculator.js"></script>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=n,minimal-ui,height=device-height">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=n,minimal-ui">
     <script src="keyboard.js"></script>
 </head>
 <body><!--calculator logo-->
