--- a/calculator4/index.html
+++ b/calculator4/index.html
@@ -8,7 +8,11 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" id="style">
     <script src="calculator.js"></script>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=n,minimal-ui">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-status-bar-style" content="black">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon-precomposed" href="icon.ico"/>
     <script src="keyboard.js"></script>
 </head>
 <body><!--calculator logo-->
