add phone version

--- a/flight/index.html
+++ b/flight/index.html
@@ -5,8 +5,10 @@
     <title>Seat Seletion</title>
     <script src="flight.js"></script>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
 </head>
 <body>
+<div class="header"><b>Seat Selection</b><span class="sub" onclick="submitresult()">Submit</span></div>
 <div class="maincontent">
     <table>
         <tr>
