--- a/flight/index.html
+++ b/flight/index.html
@@ -12,7 +12,7 @@
 <div class="maincontent">
     <table>
         <tr>
-            <td class="black">Window</td>
+            <td class="black none">Window</td>
             <td>A</td>
             <td>B</td>
             <td>C</td>
@@ -20,7 +20,7 @@
             <td>J</td>
             <td>K</td>
             <td>L</td>
-            <td class="black">Window</td>
+            <td class="black none">Window</td>
         </tr>
         <tr>
             <td>11</td>
