--- a/myhome.html
+++ b/myhome.html
@@ -136,6 +136,9 @@
 <div class="bottombutton calculator" onclick="window.location.href='calculator4/index.html'">
     Week4 Calculator
 </div>
+<div class="bottombutton flight" onclick="window.location.href='flight/index.html'">
+    Seat Selection
+</div>
 <div id="footer" class="textcenter">
     © Deng Renjie All Rights Reserved
 </div>
