--- a/flight/index.html
+++ b/flight/index.html
@@ -6,6 +6,7 @@
     <script src="flight.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="theme-color" content="#3eb8eb">
 </head>
 <body>
 <div class="header"><b>Seat Selection</b><span class="sub" onclick="submitresult()">Submit</span></div>
