add sth in flight index

--- a/flight/index.html
+++ b/flight/index.html
@@ -168,6 +168,24 @@
             <td>22</td>
         </tr>
     </table>
+<div class="photos">
+    <table>
+        <tr>
+            <td><img src="available.png" alt=""></td>
+            <td><img src="unavailable.png" alt=""></td>
+            <td><img src="selected.png" alt=""></td>
+            <td><img src="e.png" alt=""></td>
+            <td><img src="pass.png" alt=""></td>
+        </tr>
+        <tr>
+            <th>Available</th>
+            <th>Unavailable</th>
+            <th>Selected</th>
+            <th>Emergency</th>
+            <th>Aisle</th>
+        </tr>
+    </table>
+</div>
     <button class="btn bluebtn" onclick="submitresult()">Submit</button>
 </div>
 </body>
